fixed linux support